# online-ddl-poc

./: .gitignore  dockerfile  flyway.conf  locustfile.py  makefile  pyproject.toml
app/: config.py  database.py  main.py
migrations/sql/: V2__add_dummy_column.sql  V3__add_index_dummy_test.sql
