[project]
name = "locust-rdb-test"
version = "0.1.0"
description = ""
dependencies = [
    "aiomysql>=0.2.0",
    "fastapi>=0.115.5",
    "locust>=2.32.3",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "cryptography>=43.0.3",
]
requires-python = ">=3.11"
